--- a/fusionweather/src/main/resources/microservice.yaml
+++ b/fusionweather/src/main/resources/microservice.yaml
@@ -33,8 +33,8 @@ servicecomb:
 
 # TODO: 使用微服务引擎专业版部署之前，需要配置 AK/SK
 #  credentials:
-#    akskEnabled: true
-#    accessKey: add your ak/sk from huaweicloud
-#    secretKey: add your ak/sk from huaweicloud
-#    akskCustomCipher: default
-#    project: cn-south-1
+    akskEnabled: true
+    accessKey: FM5LYAGUYDO7MKSF6YSS
+    secretKey: J1qiDk9MjtyrfA6oXn7SPrck9YUAEnraXgSbjj5N
+    akskCustomCipher: default
+    project: ap-southeast-2
