--- a/weather-beta/src/main/resources/microservice.yaml
+++ b/weather-beta/src/main/resources/microservice.yaml
@@ -28,9 +28,9 @@ servicecomb:
     pattern: "%h %{dd/MMM/yyyy:HH:mm:ss.SSSZ|GMT+0008|en_US}t %r %s %B %D"
 
 # TODO: 使用微服务引擎专业版部署之前，需要配置 AK/SK
-#  credentials:
-#    akskEnabled: true
-#    accessKey: add your ak/sk from huaweicloud
-#    secretKey: add your ak/sk from huaweicloud
-#    akskCustomCipher: default
-#    project: cn-south-1
+  credentials:
+    akskEnabled: true
+    accessKey: FM5LYAGUYDO7MKSF6YSS
+    secretKey: J1qiDk9MjtyrfA6oXn7SPrck9YUAEnraXgSbjj5N
+    akskCustomCipher: default
+    project: ap-southeast-2
