--- a/fusionweather/pom.xml
+++ b/fusionweather/pom.xml
@@ -65,7 +65,12 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>
+        </dependency>      
+        <dependency>  
+            <groupId>com.huawei.paas.cse</groupId>
+            <artifactId>foundation-auth</artifactId>
         </dependency>
+            
     </dependencies>
 
     <build>
