--- a/weather-beta/pom.xml
+++ b/weather-beta/pom.xml
@@ -67,6 +67,10 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
+       <dependency>  
+            <groupId>com.huawei.paas.cse</groupId>
+            <artifactId>foundation-auth</artifactId>
+        </dependency>            
     </dependencies>
 
     <build>
